--- a/funnel/index.html
+++ b/funnel/index.html
@@ -27,7 +27,8 @@
                 </div>
             </div>
 
-            <a href="#pricing" class="cta-button">Get Instant Access</a>
+            <a href="https://app.allinonemarketing.com/v2/preview/IuIgBF7I8IEq6CntbBqm" class="cta-button">Get Instant
+                Access</a>
         </div>
     </header>
 
@@ -76,7 +77,8 @@
         <div class="container">
             <h2>The Ultimate Solution to Your Productivity Woes is Here</h2>
             <h3>Look no further—our solution is tailored for you.</h3>
-            <a href="#pricing" class="cta-button">Get Instant Access</a>
+            <a href="https://app.allinonemarketing.com/v2/preview/IuIgBF7I8IEq6CntbBqm" class="cta-button">Get Instant
+                Access</a>
         </div>
     </section>
 
@@ -110,7 +112,8 @@
                 </div>
             </div>
 
-            <a href="#pricing" class="cta-button">Get Instant Access</a>
+            <a href="https://app.allinonemarketing.com/v2/preview/IuIgBF7I8IEq6CntbBqm" class="cta-button">Get Instant
+                Access</a>
         </div>
     </section>
 
@@ -137,7 +140,8 @@
 
             <div class="price-block" id="pricing">
                 <h3>Original Price: <span class="strike">$997</span></h3>
-                <a href="#" class="cta-button pulse">Get Instant Access</a>
+                <a href="https://app.allinonemarketing.com/v2/preview/IuIgBF7I8IEq6CntbBqm" class="cta-button pulse">Get
+                    Instant Access</a>
             </div>
         </div>
     </section>
@@ -250,7 +254,8 @@
             <h2>Efficiency with AI?</h2>
             <p>Enrol today and start using AI to save time, reduce effort, and improve your workflow. The future of
                 productivity is here—don’t miss out!</p>
-            <a href="#pricing" class="cta-button pulse">Get Instant Access</a>
+            <a href="https://app.allinonemarketing.com/v2/preview/IuIgBF7I8IEq6CntbBqm" class="cta-button pulse">Get
+                Instant Access</a>
         </div>
     </footer>
 
