--- a/index.html
+++ b/index.html
@@ -154,29 +154,19 @@
                         <div class="email-capture">
                             <h4>
                                 <svg class="section-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                                    <path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"></path>
-                                    <polyline points="7 10 12 15 17 10"></polyline>
-                                    <line x1="12" y1="15" x2="12" y2="3"></line>
+                                    <path d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z"></path>
                                 </svg>
-                                Get Your Full Recovery Plan
+                                Ready to Recover This Revenue?
                             </h4>
-                            <p>Enter your email to receive:</p>
-                            <ul class="benefits-list">
-                                <li>Detailed breakdown by month/quarter</li>
-                                <li>Industry comparison report</li>
-                                <li>3 strategies to recover this revenue</li>
-                            </ul>
-                            <form id="emailForm" class="email-form">
-                                <input type="email" id="email" placeholder="Enter your email" required>
-                                <button type="submit" class="submit-button">
-                                    Send My Report
-                                    <svg class="button-arrow" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                                        <line x1="22" y1="2" x2="11" y2="13"></line>
-                                        <polygon points="22 2 15 22 11 13 2 9 22 2"></polygon>
-                                    </svg>
-                                </button>
-                            </form>
-                            <p class="form-disclaimer">We respect your inbox. Unsubscribe anytime. See how we recovered $89K for agents like Sarah M. in Phoenix.</p>
+                            <p class="cta-description">Stop losing deals to missed calls. Our AI solution answers every call in 3 rings, qualifies leads, and books appointments automatically.</p>
+                            <a href="order.html" class="get-started-button">
+                                Get Started Now
+                                <svg class="button-arrow" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                                    <line x1="5" y1="12" x2="19" y2="12"></line>
+                                    <polyline points="12 5 19 12 12 19"></polyline>
+                                </svg>
+                            </a>
+                            <p class="form-disclaimer">30-day trial • No credit card required to start • Cancel anytime</p>
                         </div>
                     </div>
                 </div>
@@ -890,22 +880,6 @@
             </div>
         </div>
     </footer>
-
-    <!-- Success Modal -->
-    <div id="successModal" class="modal">
-        <div class="modal-content">
-            <div class="modal-icon">
-                <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                    <path d="M22 11.08V12a10 10 0 1 1-5.93-9.14"></path>
-                    <polyline points="22 4 12 14.01 9 11.01"></polyline>
-                </svg>
-            </div>
-            <h3>Success! Check Your Email</h3>
-            <p>We've sent your personalized Revenue Recovery Plan to your inbox.</p>
-            <p class="modal-sub">You'll also receive our 7-email series with strategies to recover your lost revenue.</p>
-            <button class="modal-close" onclick="closeModal()">Got It!</button>
-        </div>
-    </div>
 
     <script src="js/script.js"></script>
 </body>
